samples/_failures_safe/1761074926_6040e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fff11d9.c: In function ‘main’:
./samples/SAFE/__tmp_2fff11d9.c:136:12: error: missing terminating " character
  136 |     printf("Type 'D
      |            ^~~~~~~~
./samples/SAFE/__tmp_2fff11d9.c:136:5: error: expected expression at end of input
  136 |     printf("Type 'D
      |     ^~~~~~
./samples/SAFE/__tmp_2fff11d9.c:136:5: error: expected declaration or statement at end of input
